# bngmetric

./: LICENSE  README.md  creation_example.ipynb  jaxtestbed.ipynb  numpyro_example.ipynb  pyproject.toml  testbed.ipynb
.github/workflows/: docs.yml
docs/: Makefile  conf.py  requirements.txt
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/advanced/: sensitivity.doctree  uncertainty.doctree
docs/_build/doctrees/api/: constants.doctree  core.doctree  creation.doctree  enhancement.doctree
docs/_build/doctrees/usage/: basic.doctree  creation_enhancement.doctree  offsite.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/advanced/: sensitivity.html  uncertainty.html
docs/_build/html/api/: constants.html  core.html  creation.html  enhancement.html
docs/advanced/: sensitivity.rst  uncertainty.rst
docs/api/: constants.rst  core.rst  creation.rst  enhancement.rst
src/bngmetric/: __init__.py  constants.py  core_calculations.py  creation.py  enhancement.py
src/bngmetric/data/: condition_categories.csv  condition_lookup.csv  creation_multiplier.csv  difficulty_multiplier.csv  distinctiveness.csv  enhancement_multiplier.csv  habitat_LUT.csv  risk_multiplier.csv  spatial_multiplier.csv  spatial_risk_multiplier.csv  temporal_multiplier_LUT.csv
tests/: test_bng_sensitivity.py  test_constants.py  test_core_calculations.py  test_enhancement.py  test_offsite.py
(+9 files in other folders)
