[project]
name = "bngmetric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Peter Hurley", email = "petedonhurley@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.0",
    "pandas>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
